Introduce new customization config instead of changing old config to enums

--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/happy-case-customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/happy-case-customization.config
@@ -1,6 +1,6 @@
 {
     "useLegacyEventGenerationScheme": {
-        "EventStream": {"EventOne": "NO_EVENT_SUBCLASS"}
+        "EventStream": ["EventOne"]
     },
     "underscoresInNameBehavior": "ALLOW"
 }
