--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/multiple-event-types-same-shape.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/emitters/customizations/processors/uselegacyeventgenerationscheme/multiple-event-types-same-shape.config
@@ -1,6 +1,5 @@
 {
     "useLegacyEventGenerationScheme": {
-        "EventStream": {"EventOne": "NO_EVENT_SUBCLASS", "secondEventOne": "NO_EVENT_SUBCLASS"}
-    },
-    "underscoresInNameBehavior": "ALLOW"
+        "EventStream": ["EventOne", "secondEventOne"]
+    }
 }
