--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/rest-json/customization.config
@@ -1,81 +1,92 @@
 {
-    "authPolicyActions" : {
-        "skip" : true
+    "authPolicyActions": {
+        "skip": true
     },
     "presignersFqcn": "software.amazon.awssdk.services.acm.presign.AcmClientPresigners",
     "serviceSpecificHttpConfig": "software.amazon.MyServiceHttpConfig",
     "serviceConfig": {
-      "className": "ServiceConfiguration",
-      "hasDualstackProperty": true,
-      "hasFipsProperty": true,
-      "hasUseArnRegionProperty": true,
-      "hasMultiRegionEnabledProperty": true,
-      "hasPathStyleAccessEnabledProperty":true,
-      "hasAccelerateModeEnabledProperty":true,
-      "hasChecksumValidationEnabledProperty":true
+        "className": "ServiceConfiguration",
+        "hasDualstackProperty": true,
+        "hasFipsProperty": true,
+        "hasUseArnRegionProperty": true,
+        "hasMultiRegionEnabledProperty": true,
+        "hasPathStyleAccessEnabledProperty": true,
+        "hasAccelerateModeEnabledProperty": true,
+        "hasChecksumValidationEnabledProperty": true
     },
     "customRetryPolicy": "software.amazon.MyServiceRetryPolicy",
     "customRetryStrategy": "software.amazon.MyServiceRetryStrategy",
-    "verifiedSimpleMethods" : ["paginatedOperationWithResultKey"],
-    "excludedSimpleMethods" : [
+    "verifiedSimpleMethods": [
+        "paginatedOperationWithResultKey"
+    ],
+    "excludedSimpleMethods": [
         "eventStreamOperation"
     ],
-  "utilitiesMethod": {
-    "returnType": "software.amazon.awssdk.services.json.JsonUtilities",
-    "createMethodParams": ["param1", "param2", "param3"]
-  },
+    "utilitiesMethod": {
+        "returnType": "software.amazon.awssdk.services.json.JsonUtilities",
+        "createMethodParams": [
+            "param1",
+            "param2",
+            "param3"
+        ]
+    },
     "additionalBuilderMethods": [
         {
-          "methodName": "builderOne",
-          "clientType": "ASYNC",
-          "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
-          "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
-          "statement": "builder().build()",
-          "javaDoc": "Create a default builder"
+            "methodName": "builderOne",
+            "clientType": "ASYNC",
+            "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
+            "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
+            "statement": "builder().build()",
+            "javaDoc": "Create a default builder"
         },
         {
-          "methodName": "builderTwo",
-          "clientType": "ASYNC",
-          "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilderTwo",
-          "returnType": "software.amazon.awssdk.services.builder.Builder",
-          "statement": "builder2().build()",
-          "javaDoc": "Create a default builder two"
-        },
-
-        {
-          "methodName": "builderThree",
-          "clientType": "SYNC",
-          "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
-          "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
-          "statement": "builder().build()",
-          "javaDoc": "Create a default builder"
+            "methodName": "builderTwo",
+            "clientType": "ASYNC",
+            "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilderTwo",
+            "returnType": "software.amazon.awssdk.services.builder.Builder",
+            "statement": "builder2().build()",
+            "javaDoc": "Create a default builder two"
         },
         {
-          "methodName": "builderFour",
-          "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
-          "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
-          "statement": "builder().build()",
-          "javaDoc": "Create a default builder"
+            "methodName": "builderThree",
+            "clientType": "SYNC",
+            "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
+            "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
+            "statement": "builder().build()",
+            "javaDoc": "Create a default builder"
+        },
+        {
+            "methodName": "builderFour",
+            "instanceType": "software.amazon.awssdk.services.builder.DefaultBuilder",
+            "returnType": "software.amazon.awssdk.services.builder.CustomBuilder",
+            "statement": "builder().build()",
+            "javaDoc": "Create a default builder"
         }
     ],
-  "internalPlugins": [
-    "software.amazon.awssdk.codegen.poet.plugins.InternalTestPlugin1",
-    "software.amazon.awssdk.codegen.poet.plugins.InternalTestPlugin2"
-  ],
-  "useLegacyEventGenerationScheme": {
-      "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
-      "InputEventStreamTwo": {
-          "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
-          "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
-      },
-      "EventStream": {
-        "EventOne": "NO_EVENT_SUBCLASS",
-        "eventThree": "NO_EVENT_SUBCLASS",
-        "EventTheSecond": "NO_UNIQUE_EVENT_NAMES",
-        "secondEventOne": "NO_UNIQUE_EVENT_NAMES"
+    "internalPlugins": [
+        "software.amazon.awssdk.codegen.poet.plugins.InternalTestPlugin1",
+        "software.amazon.awssdk.codegen.poet.plugins.InternalTestPlugin2"
+    ],
+    "useLegacyEventGenerationScheme": {
+        "EventStream": [
+            "EventOne",
+            "eventThree"
+        ]
+    },
+    "asyncClientDecoratorClass": true,
+    "syncClientDecoratorClass": true,
+    "batchManagerSupported": true,
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamTwo": [
+            "InputEventOne",
+            "InputEventTwo"
+        ],
+        "EventStream": [
+            "EventTheSecond",
+            "secondEventOne"
+        ]
     }
-  },
-  "asyncClientDecoratorClass": true,
-  "syncClientDecoratorClass": true,
-  "batchManagerSupported": true
 }
