--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/model/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/model/customization.config
@@ -1,5 +1,5 @@
 {
-    "excludedSimpleMethods" : [
+    "excludedSimpleMethods": [
         "allTypes",
         "nestedContainers",
         "operationWithNoInputOrOutput",
@@ -10,7 +10,7 @@
             "modify": [
                 {
                     "OriginalNameNoDeprecation": {
-                        "emitPropertyName":"NewNameNoDeprecation"
+                        "emitPropertyName": "NewNameNoDeprecation"
                     },
                     "OriginalNameDeprecated": {
                         "emitPropertyName": "NewName",
@@ -35,41 +35,46 @@
             ]
         },
         "BaseType": {
-          "inject": [
-            {
-              "CustomShape1": {
-                "shape": "CustomShape1",
-                "documentation": "Custom shape of type string"
-              },
-              "CustomShape2": {
-                "shape": "CustomShape2",
-                "documentation": "Custom shape of type integer"
-              }
-            }
-          ]
+            "inject": [
+                {
+                    "CustomShape1": {
+                        "shape": "CustomShape1",
+                        "documentation": "Custom shape of type string"
+                    },
+                    "CustomShape2": {
+                        "shape": "CustomShape2",
+                        "documentation": "Custom shape of type integer"
+                    }
+                }
+            ]
         }
     },
     "customSdkShapes": {
-      "shapes": {
-        "CustomShape1": {
-          "type":"string"
-        },
-        "CustomShape2": {
-          "type":"integer"
+        "shapes": {
+            "CustomShape1": {
+                "type": "string"
+            },
+            "CustomShape2": {
+                "type": "integer"
+            }
         }
-      }
     },
     "underscoresInNameBehavior": "ALLOW",
     "requiredTraitValidationEnabled": true,
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
-        "InputEventStreamTwo": {"InputEventTwo": "NO_UNIQUE_EVENT_NAMES"},
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "SecondEventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
-            "SecondEventTwo": "NO_UNIQUE_EVENT_NAMES",
-            "eventthree": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamTwo": [
+            "InputEventTwo"
+        ],
+        "EventStream": [
+            "EventOne",
+            "SecondEventOne",
+            "EventTwo",
+            "SecondEventTwo",
+            "eventthree"
+        ]
     }
 }
