--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/cbor/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/client/c2j/cbor/customization.config
@@ -1,38 +1,50 @@
 {
-    "authPolicyActions" : {
-        "skip" : true
+    "authPolicyActions": {
+        "skip": true
     },
     "presignersFqcn": "software.amazon.awssdk.services.acm.presign.AcmClientPresigners",
     "serviceSpecificHttpConfig": "software.amazon.MyServiceHttpConfig",
     "serviceConfig": {
-      "className": "ServiceConfiguration",
-      "hasDualstackProperty": true,
-      "hasFipsProperty": true
+        "className": "ServiceConfiguration",
+        "hasDualstackProperty": true,
+        "hasFipsProperty": true
     },
     "customRetryPolicy": "software.amazon.MyServiceRetryPolicy",
     "customRetryStrategy": "software.amazon.MyServiceRetryStrategy",
-    "verifiedSimpleMethods" : ["paginatedOperationWithResultKey"],
-    "excludedSimpleMethods" : [
+    "verifiedSimpleMethods": [
+        "paginatedOperationWithResultKey"
+    ],
+    "excludedSimpleMethods": [
         "eventStreamOperation"
     ],
-  "utilitiesMethod": {
-    "returnType": "software.amazon.awssdk.services.json.JsonUtilities",
-    "createMethodParams": ["param1", "param2", "param3"]
-  },
-  "useLegacyEventGenerationScheme": {
-      "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
-      "InputEventStreamTwo": {
-          "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
-          "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
-      },
-      "EventStream": {
-        "EventOne": "NO_EVENT_SUBCLASS",
-        "eventThree": "NO_EVENT_SUBCLASS",
-        "EventTheSecond": "NO_UNIQUE_EVENT_NAMES",
-        "secondEventOne": "NO_UNIQUE_EVENT_NAMES"
+    "utilitiesMethod": {
+        "returnType": "software.amazon.awssdk.services.json.JsonUtilities",
+        "createMethodParams": [
+            "param1",
+            "param2",
+            "param3"
+        ]
+    },
+    "useLegacyEventGenerationScheme": {
+        "EventStream": [
+            "EventOne",
+            "eventThree"
+        ]
+    },
+    "customServiceMetadata": {
+        "protocol": "cbor"
+    },
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamTwo": [
+            "InputEventOne",
+            "InputEventTwo"
+        ],
+        "EventStream": [
+            "EventTheSecond",
+            "secondEventOne"
+        ]
     }
-  },
-  "customServiceMetadata": {
-    "protocol": "cbor"
-  }
 }
