--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/eventstream/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/eventstream/customization.config
@@ -1,15 +1,18 @@
 {
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
-        "InputEventStreamTwo": {
-            "InputEventOne": "NO_UNIQUE_EVENT_NAMES",
-            "InputEventTwo": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
-            "secondEventOne": "NO_UNIQUE_EVENT_NAMES",
-            "secondeventtwo": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamTwo": [
+            "InputEventOne",
+            "InputEventTwo"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo",
+            "secondEventOne",
+            "secondeventtwo"
+        ]
     }
 }
