--- a/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/transform/customization.config
+++ b/codegen/src/test/resources/software/amazon/awssdk/codegen/poet/transform/customization.config
@@ -1,20 +1,25 @@
 {
-    "excludedSimpleMethods" : [
+    "excludedSimpleMethods": [
         "allTypes",
         "nestedContainers",
         "operationWithNoInputOrOutput",
         "eventStreamOperation"
     ],
     "modelMarshallerDefaultValueSupplier": {
-         "StringMember" : "software.amazon.awssdk.codegen.poet.transform.CustomDefaultValueSupplier.getInstance()"
+        "StringMember": "software.amazon.awssdk.codegen.poet.transform.CustomDefaultValueSupplier.getInstance()"
     },
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {"InputEvent": "NO_UNIQUE_EVENT_NAMES"},
-        "InputEventStreamTwo": {"InputEventTwo": "NO_UNIQUE_EVENT_NAMES"},
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
-            "EventThree": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamTwo": [
+            "InputEventTwo"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo",
+            "EventThree"
+        ]
     }
 }
