Update other service and test customization configs

--- a/services/bedrockruntime/src/main/resources/codegen-resources/customization.config
+++ b/services/bedrockruntime/src/main/resources/codegen-resources/customization.config
@@ -1,40 +1,41 @@
 {
     "enableGenerateCompiledEndpointRules": true,
     "enableFastUnmarshaller": true,
-    "useLegacyEventGenerationScheme": {
-        "ConverseStreamOutput": {
-            "messageStart": "NO_UNIQUE_EVENT_NAMES",
-            "contentBlockStart": "NO_UNIQUE_EVENT_NAMES",
-            "contentBlockDelta": "NO_UNIQUE_EVENT_NAMES",
-            "contentBlockStop": "NO_UNIQUE_EVENT_NAMES",
-            "messageStop": "NO_UNIQUE_EVENT_NAMES",
-            "metadata": "NO_UNIQUE_EVENT_NAMES",
-            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
-            "modelStreamErrorException": "NO_UNIQUE_EVENT_NAMES",
-            "validationException": "NO_UNIQUE_EVENT_NAMES",
-            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
-            "serviceUnavailableException": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "InvokeModelWithBidirectionalStreamInput": {
-            "chunk": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "InvokeModelWithBidirectionalStreamOutput": {
-            "chunk": "NO_UNIQUE_EVENT_NAMES",
-            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
-            "modelStreamErrorException": "NO_UNIQUE_EVENT_NAMES",
-            "validationException": "NO_UNIQUE_EVENT_NAMES",
-            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
-            "modelTimeoutException": "NO_UNIQUE_EVENT_NAMES",
-            "serviceUnavailableException": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "ResponseStream": {
-            "chunk": "NO_UNIQUE_EVENT_NAMES",
-            "internalServerException": "NO_UNIQUE_EVENT_NAMES",
-            "modelStreamErrorException": "NO_UNIQUE_EVENT_NAMES",
-            "validationException": "NO_UNIQUE_EVENT_NAMES",
-            "throttlingException": "NO_UNIQUE_EVENT_NAMES",
-            "modelTimeoutException": "NO_UNIQUE_EVENT_NAMES",
-            "serviceUnavailableException": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "ConverseStreamOutput": [
+            "messageStart",
+            "contentBlockStart",
+            "contentBlockDelta",
+            "contentBlockStop",
+            "messageStop",
+            "metadata",
+            "internalServerException",
+            "modelStreamErrorException",
+            "validationException",
+            "throttlingException",
+            "serviceUnavailableException"
+        ],
+        "InvokeModelWithBidirectionalStreamInput": [
+            "chunk"
+        ],
+        "InvokeModelWithBidirectionalStreamOutput": [
+            "chunk",
+            "internalServerException",
+            "modelStreamErrorException",
+            "validationException",
+            "throttlingException",
+            "modelTimeoutException",
+            "serviceUnavailableException"
+        ],
+        "ResponseStream": [
+            "chunk",
+            "internalServerException",
+            "modelStreamErrorException",
+            "validationException",
+            "throttlingException",
+            "modelTimeoutException",
+            "serviceUnavailableException"
+        ]
     }
 }
