--- a/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudwatchlogs/src/main/resources/codegen-resources/customization.config
@@ -16,12 +16,13 @@
     },
     "enableGenerateCompiledEndpointRules": true,
     "enableFastUnmarshaller": true,
-    "useLegacyEventGenerationScheme": {
-        "StartLiveTailResponseStream": {
-            "sessionStart": "NO_UNIQUE_EVENT_NAMES",
-            "sessionUpdate": "NO_UNIQUE_EVENT_NAMES",
-            "SessionTimeoutException": "NO_UNIQUE_EVENT_NAMES",
-            "SessionStreamingException": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "StartLiveTailResponseStream": [
+            "sessionStart",
+            "sessionUpdate",
+            "SessionTimeoutException",
+            "SessionStreamingException"
+        ]
     }
 }
