--- a/services/kinesis/src/main/resources/codegen-resources/customization.config
+++ b/services/kinesis/src/main/resources/codegen-resources/customization.config
@@ -1,24 +1,26 @@
 {
-  "enableGenerateCompiledEndpointRules": true,
-  "verifiedSimpleMethods": [
-    "describeLimits",
-    "listStreams"
-  ],
-  "customServiceMetadata": {
-    "protocol": "cbor"
-  },
-  "excludedSimpleMethods": [
-    "deregisterStreamConsumer",
-    "describeStreamConsumer",
-    "listShards"
-  ],
-  "customRetryPolicy": "software.amazon.awssdk.services.kinesis.KinesisRetryPolicy",
-  "customResponseMetadata": {
-    "EXTENDED_REQUEST_ID": "x-amz-id-2"
-  },
-  "serviceSpecificHttpConfig": "software.amazon.awssdk.services.kinesis.internal.KinesisHttpConfigurationOptions",
-  "useLegacyEventGenerationScheme": {
-      "SubscribeToShardEventStream": {"SubscribeToShardEvent": "NO_EVENT_SUBCLASS"}
+    "enableGenerateCompiledEndpointRules": true,
+    "verifiedSimpleMethods": [
+        "describeLimits",
+        "listStreams"
+    ],
+    "customServiceMetadata": {
+        "protocol": "cbor"
+    },
+    "excludedSimpleMethods": [
+        "deregisterStreamConsumer",
+        "describeStreamConsumer",
+        "listShards"
+    ],
+    "customRetryPolicy": "software.amazon.awssdk.services.kinesis.KinesisRetryPolicy",
+    "customResponseMetadata": {
+        "EXTENDED_REQUEST_ID": "x-amz-id-2"
+    },
+    "serviceSpecificHttpConfig": "software.amazon.awssdk.services.kinesis.internal.KinesisHttpConfigurationOptions",
+    "useLegacyEventGenerationScheme": {
+        "SubscribeToShardEventStream": [
+            "SubscribeToShardEvent"
+        ]
     },
     "skipEndpointTests": {
         "Account endpoint targeting control operation type in ADC regions": "Test is broken for client tests, need operationInputs.",
