--- a/services/qbusiness/src/main/resources/codegen-resources/customization.config
+++ b/services/qbusiness/src/main/resources/codegen-resources/customization.config
@@ -2,21 +2,22 @@
     "enableGenerateCompiledEndpointRules": true,
     "usePriorKnowledgeForH2": true,
     "enableFastUnmarshaller": true,
-    "useLegacyEventGenerationScheme": {
-        "ChatInputStream": {
-            "configurationEvent": "NO_UNIQUE_EVENT_NAMES",
-            "textEvent": "NO_UNIQUE_EVENT_NAMES",
-            "attachmentEvent": "NO_UNIQUE_EVENT_NAMES",
-            "actionExecutionEvent": "NO_UNIQUE_EVENT_NAMES",
-            "endOfInputEvent": "NO_UNIQUE_EVENT_NAMES",
-            "authChallengeResponseEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "ChatOutputStream": {
-            "textEvent": "NO_UNIQUE_EVENT_NAMES",
-            "metadataEvent": "NO_UNIQUE_EVENT_NAMES",
-            "actionReviewEvent": "NO_UNIQUE_EVENT_NAMES",
-            "failedAttachmentEvent": "NO_UNIQUE_EVENT_NAMES",
-            "authChallengeRequestEvent": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "ChatInputStream": [
+            "configurationEvent",
+            "textEvent",
+            "attachmentEvent",
+            "actionExecutionEvent",
+            "endOfInputEvent",
+            "authChallengeResponseEvent"
+        ],
+        "ChatOutputStream": [
+            "textEvent",
+            "metadataEvent",
+            "actionReviewEvent",
+            "failedAttachmentEvent",
+            "authChallengeRequestEvent"
+        ]
     }
 }
