--- a/services/s3/src/main/resources/codegen-resources/customization.config
+++ b/services/s3/src/main/resources/codegen-resources/customization.config
@@ -361,13 +361,14 @@
             "className": "software.amazon.awssdk.services.s3.internal.CustomRequestTransformerUtils"
         }
     },
-    "useLegacyEventGenerationScheme": {
-        "SelectObjectContentEventStream": {
-            "Records": "NO_UNIQUE_EVENT_NAMES",
-            "Stats": "NO_UNIQUE_EVENT_NAMES",
-            "Progress": "NO_UNIQUE_EVENT_NAMES",
-            "Cont": "NO_UNIQUE_EVENT_NAMES",
-            "End": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "SelectObjectContentEventStream": [
+            "Records",
+            "Stats",
+            "Progress",
+            "Cont",
+            "End"
+        ]
     }
 }
