--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/serviceconfig/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/serviceconfig/customization.config
@@ -6,13 +6,14 @@
         "className": "ProtocolRestJsonWithConfigConfiguration",
         "hasDualstackProperty": true
     },
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {
-            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo"
+        ]
     }
 }
