--- a/services/lambda/src/main/resources/codegen-resources/customization.config
+++ b/services/lambda/src/main/resources/codegen-resources/customization.config
@@ -10,10 +10,11 @@
     ],
     "enableGenerateCompiledEndpointRules": true,
     "enableFastUnmarshaller": true,
-    "useLegacyEventGenerationScheme": {
-        "InvokeWithResponseStreamResponseEvent": {
-            "PayloadChunk": "NO_UNIQUE_EVENT_NAMES",
-            "InvokeComplete": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InvokeWithResponseStreamResponseEvent": [
+            "PayloadChunk",
+            "InvokeComplete"
+        ]
     }
 }
