--- a/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
+++ b/services/lexruntimev2/src/main/resources/codegen-resources/customization.config
@@ -5,30 +5,31 @@
     "enableGenerateCompiledEndpointRules": true,
     "usePriorKnowledgeForH2": true,
     "enableFastUnmarshaller": true,
-    "useLegacyEventGenerationScheme": {
-        "StartConversationRequestEventStream": {
-            "ConfigurationEvent": "NO_UNIQUE_EVENT_NAMES",
-            "AudioInputEvent": "NO_UNIQUE_EVENT_NAMES",
-            "DTMFInputEvent": "NO_UNIQUE_EVENT_NAMES",
-            "TextInputEvent": "NO_UNIQUE_EVENT_NAMES",
-            "PlaybackCompletionEvent": "NO_UNIQUE_EVENT_NAMES",
-            "DisconnectionEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "StartConversationResponseEventStream": {
-            "PlaybackInterruptionEvent": "NO_UNIQUE_EVENT_NAMES",
-            "TranscriptEvent": "NO_UNIQUE_EVENT_NAMES",
-            "IntentResultEvent": "NO_UNIQUE_EVENT_NAMES",
-            "TextResponseEvent": "NO_UNIQUE_EVENT_NAMES",
-            "AudioResponseEvent": "NO_UNIQUE_EVENT_NAMES",
-            "HeartbeatEvent": "NO_UNIQUE_EVENT_NAMES",
-            "AccessDeniedException": "NO_UNIQUE_EVENT_NAMES",
-            "ResourceNotFoundException": "NO_UNIQUE_EVENT_NAMES",
-            "ValidationException": "NO_UNIQUE_EVENT_NAMES",
-            "ThrottlingException": "NO_UNIQUE_EVENT_NAMES",
-            "InternalServerException": "NO_UNIQUE_EVENT_NAMES",
-            "ConflictException": "NO_UNIQUE_EVENT_NAMES",
-            "DependencyFailedException": "NO_UNIQUE_EVENT_NAMES",
-            "BadGatewayException": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "StartConversationRequestEventStream": [
+            "ConfigurationEvent",
+            "AudioInputEvent",
+            "DTMFInputEvent",
+            "TextInputEvent",
+            "PlaybackCompletionEvent",
+            "DisconnectionEvent"
+        ],
+        "StartConversationResponseEventStream": [
+            "PlaybackInterruptionEvent",
+            "TranscriptEvent",
+            "IntentResultEvent",
+            "TextResponseEvent",
+            "AudioResponseEvent",
+            "HeartbeatEvent",
+            "AccessDeniedException",
+            "ResourceNotFoundException",
+            "ValidationException",
+            "ThrottlingException",
+            "InternalServerException",
+            "ConflictException",
+            "DependencyFailedException",
+            "BadGatewayException"
+        ]
     }
 }
