--- a/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
+++ b/test/codegen-generated-classes-test/src/main/resources/codegen-resources/endpointproviders/customization.config
@@ -50,13 +50,14 @@
             }
         }
     ],
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {
-            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo"
+        ]
     }
 }
