Fix protocol tests config

--- a/test/protocol-tests/src/main/resources/codegen-resources/restxml/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restxml/customization.config
@@ -11,11 +11,12 @@
         "restXmlTypes"
     ],
     "skipEndpointTestGeneration": true,
-    "useLegacyEventGenerationScheme": {
-        "EventStream": {
-            "EventPayloadEvent": "NO_UNIQUE_EVENT_NAMES",
-            "NonEventPayloadEvent": "NO_UNIQUE_EVENT_NAMES",
-            "SecondEventPayloadEvent": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "EventStream": [
+            "EventPayloadEvent",
+            "NonEventPayloadEvent",
+            "SecondEventPayloadEvent"
+        ]
     }
 }
