--- a/test/protocol-tests/src/main/resources/codegen-resources/restjson/contenttype/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restjson/contenttype/customization.config
@@ -1,16 +1,17 @@
 {
     "skipEndpointTestGeneration": true,
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {
-            "BlobAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES",
-            "StringAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES",
-            "HeadersOnlyEvent": "NO_UNIQUE_EVENT_NAMES",
-            "EndEvent": "NO_UNIQUE_EVENT_NAMES",
-            "ImplicitPayloadAndHeadersEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "BlobAndHeadersEvent",
+            "StringAndHeadersEvent",
+            "HeadersOnlyEvent",
+            "EndEvent",
+            "ImplicitPayloadAndHeadersEvent"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo"
+        ]
     }
 }
