--- a/test/protocol-tests/src/main/resources/codegen-resources/restjson/customization.config
+++ b/test/protocol-tests/src/main/resources/codegen-resources/restjson/customization.config
@@ -18,17 +18,18 @@
         "getOperationWithBody"
     ],
     "skipEndpointTestGeneration": true,
-    "useLegacyEventGenerationScheme": {
-        "InputEventStream": {
-            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "InputEventStreamStringPayload": {
-            "InputEvent": "NO_UNIQUE_EVENT_NAMES"
-        },
-        "EventStream": {
-            "EventOne": "NO_UNIQUE_EVENT_NAMES",
-            "EventTwo": "NO_UNIQUE_EVENT_NAMES",
-            "errorOne": "NO_UNIQUE_EVENT_NAMES"
-        }
+    "useLegacyEventGenerationScheme": {},
+    "disableUniqueEventStreamShapePreprocessing": {
+        "InputEventStream": [
+            "InputEvent"
+        ],
+        "InputEventStreamStringPayload": [
+            "InputEvent"
+        ],
+        "EventStream": [
+            "EventOne",
+            "EventTwo",
+            "errorOne"
+        ]
     }
 }
