--- a/test/region-testing/pom.xml
+++ b/test/region-testing/pom.xml
@@ -102,6 +102,7 @@
                         </goals>
                         <configuration>
                             <endpoints>${basedir}/src/test/resources/variants-test-endpoints.json</endpoints>
+                            <partitionsjson>${basedir}/src/test/resources/variants-test-partitions.json.resource</partitionsjson>
                         </configuration>
                     </execution>
                 </executions>
