--- a/test/protocol-tests/pom.xml
+++ b/test/protocol-tests/pom.xml
@@ -89,6 +89,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>profiles</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
             <version>${awsjavasdk.version}</version>
             <scope>runtime</scope>
