Update generator plugin to support validators
This commit updates the generation mojo to suppport validators:

 - Add flag for controling whether the validation report is written to
   disk
 - Build all models to IntermediateModel upfront
 - If a service model targets another for sharing shapes, also pass in
   the target service IntermedidateModel

--- a/codegen-maven-plugin/pom.xml
+++ b/codegen-maven-plugin/pom.xml
@@ -58,6 +58,11 @@
             <version>${awsjavasdk.version}</version>
         </dependency>
         <dependency>
+            <artifactId>utils</artifactId>
+            <groupId>software.amazon.awssdk</groupId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>compile</scope>
