docs: add jencymaryjoseph as a contributor for code

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1057,6 +1057,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jencymaryjoseph",
+      "name": "Jency Joseph",
+      "avatar_url": "https://avatars.githubusercontent.com/u/35571282?v=4",
+      "profile": "https://github.com/jencymaryjoseph",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
