--- a/core/auth/pom.xml
+++ b/core/auth/pom.xml
@@ -60,6 +60,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>imds</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>profiles</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
