--- a/.github/workflows/api-surface-area-review-verification.yml
+++ b/.github/workflows/api-surface-area-review-verification.yml
@@ -9,6 +9,8 @@ on:
     types: [ opened, synchronize, reopened, labeled, unlabeled ]
     branches:
       - master
+    paths:
+      - '**/*.java'   
 
 jobs:
   api-surface-area-review-verification:
@@ -20,7 +22,7 @@ jobs:
         if: ${{ !contains(github.event.pull_request.labels.*.name, 'no-api-surface-area-change') }}
         run: |
           git fetch origin ${{ github.base_ref }} --depth 1
-          FILES=$( git diff remotes/origin/${{ github.base_ref }} --name-only | grep "\.java$" | grep -v -E "(^|/)(internal|test|codegen|v2-migration)/"  || true)
+          FILES=$( git diff remotes/origin/${{ github.base_ref }} --name-only | grep "\.java$" | grep -v -E "(^|/)(internal|test|codegen|v2-migration|it)/"  || true)
           if [ -n "$FILES" ]; then
             echo "::error::Changes around protected/public APIs found:"
             echo "$FILES" | while read file; do
